src/app/views/welcome/login/code-field/code-field.component.scss
@import "app-variables";

GridLayout {
  background-color: const(grey);
  border-radius: 4;
  border-width: 2;
  border-color: const(grey);
}

GridLayout.focused {
  border-color: $complementary;
}

GridLayout {
  padding: 4 14;
}

Label {
  color: $input-color;
}

TextField {
  placeholder-color: $input-color;
  color: $accent;
  font-size: 18;
  border-bottom-width: 0;
}

